refactor: remove custom elements schema from demo app

--- a/src/app/views/components/date-range-picker/date-range-picker-reactive-form/date-range-picker-reactive-form.component.html
+++ b/src/app/views/components/date-range-picker/date-range-picker-reactive-form/date-range-picker-reactive-form.component.html
@@ -33,7 +33,7 @@
     <span slot="value">{{ dateRangeControl.value.to || 'n/a' }}</span>
   </forge-label-value>
   <forge-label-value>
-    <forge-tooltip position="top-left">note that the JSON conversion internally converts date object to iso-string format</forge-tooltip>
+    <forge-tooltip position="top-start">note that the JSON conversion internally converts date object to iso-string format</forge-tooltip>
     <span slot="label" class="form-value-label">
       Form value
       <i class="tyler-icons info-icon">info_outline</i>
