--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -1,11 +1,11 @@
 <ng-container *ngIf="isSmallViewPort; else largeViewPort">
-  <forge-drawer (window:resize)="adjustDrawer()" (forge-drawer-close)="closeSidenav()" type="modal" open="false" [type]="drawerType" [open]="open">
+  <forge-modal-drawer (window:resize)="adjustDrawer()" (forge-drawer-close)="closeSidenav()" type="modal" open="false" [open]="open">
     <ng-container *ngTemplateOutlet="sidenavContent"></ng-container>
-  </forge-drawer>
+  </forge-modal-drawer>
 </ng-container>
 
 <ng-template #largeViewPort>
-  <forge-drawer (window:resize)="adjustDrawer()" (forge-drawer-close)="closeSidenav()" [type]="drawerType" [open]="open">
+  <forge-drawer (window:resize)="adjustDrawer()" (forge-drawer-close)="closeSidenav()" [open]="open">
     <ng-container *ngTemplateOutlet="sidenavContent"></ng-container>
   </forge-drawer>
 </ng-template>
@@ -17,26 +17,26 @@
         <forge-icon name="home" slot="leading"></forge-icon>
         Home
       </forge-list-item>
-      <forge-list-divider></forge-list-divider>
+      <forge-divider></forge-divider>
       <forge-expansion-panel #componentExpansionPanel>
         <forge-list-item slot="header">
           <forge-icon name="settings_input_component" slot="leading"></forge-icon>
           Components
           <forge-open-icon slot="trailing"></forge-open-icon>
         </forge-list-item>
-        <forge-list-divider></forge-list-divider>
+        <forge-divider></forge-divider>
         <forge-list>
           <forge-list-item *ngFor="let item of componentMenuItems" [value]="item.value">{{item.label}}</forge-list-item>
         </forge-list>
       </forge-expansion-panel>
-      <forge-list-divider></forge-list-divider>
+      <forge-divider></forge-divider>
       <forge-expansion-panel #exampleExpansionPanel>
         <forge-list-item slot="header">
           <forge-icon name="settings" slot="leading"></forge-icon>
           Examples
           <forge-open-icon slot="trailing"></forge-open-icon>
         </forge-list-item>
-        <forge-list-divider slot="header"></forge-list-divider>
+        <forge-divider slot="header"></forge-divider>
         <forge-list>
           <forge-list-item *ngFor="let item of exampleMenuItems" [value]="item.value">{{item.label}}</forge-list-item>
         </forge-list>
