--- a/src/app/views/components/table/table.component.html
+++ b/src/app/views/components/table/table.component.html
@@ -7,7 +7,7 @@
       </h3>
       <forge-table select="true"
                  [columnConfigurations]="columnConfigurations"
-                 [data]="data$ | async"
+                 [data]="$any(data$ | async)"
                  select-key="Id"
                  (forge-table-select)="onSelect($event)"
                  (forge-table-select-all)="onSelectAll($event)"
@@ -24,7 +24,7 @@
       </h3>
       <forge-table select="true"
                  [columnConfigurations]="advColumnConfigurations"
-                 [data]="data$ | async"
+                 [data]="$any(data$ | async)"
                  allow-row-click="true"
                  filter="true"
                  select-key="Id"
@@ -48,7 +48,7 @@
         </h3>
         <forge-table select="false"
                   [columnConfigurations]="multiColumnSortConfigurations"
-                  [data]="data$ | async"
+                  [data]="$any(data$ | async)"
                   select-key="Id"
                   [multiColumnSort]="true"
                   (forge-table-sort)="onTableMultiSort($any($event).detail)">
@@ -65,9 +65,9 @@
         <forge-table select="false" #selectAllTemplateTable
           [select]="true"
           [multiselect]="true"
-          [selectCheckboxAlignment]="'right'"
+          [selectCheckboxAlignment]="$any('right')"
           [columnConfigurations]="columnConfigurations"
-          [data]="data$ | async"
+          [data]="$any(data$ | async)"
           select-key="Id">
           <div #selectAllTemplate class="select-all-template">
             <forge-menu [options]="options">
