refactor: use component delegates in demo app

--- a/src/app/views/components/button/button.component.html
+++ b/src/app/views/components/button/button.component.html
@@ -1,33 +1,33 @@
 <app-demo-card headerText="Button">
   <div>
     <forge-button>
-      <button>Standard button</button>
+      <button type="button">Standard button</button>
     </forge-button>
     <forge-button type="raised">
-      <button>Raised button</button>
+      <button type="button">Raised button</button>
     </forge-button>
     <forge-button type="unelevated">
-      <button>Unelevated button</button>
+      <button type="button">Unelevated button</button>
     </forge-button>
     <forge-button type="outlined">
-      <button>Outlined button</button>
+      <button type="button">Outlined button</button>
     </forge-button>
   </div>
 
   <div style="margin-top: 16px;">
     <forge-button type="outlined-dense">
-      <button>
+      <button type="button">
         Dense button
       </button>
     </forge-button>
     <forge-button type="outlined">
-      <button>
+      <button type="button">
         <forge-icon name="favorite"></forge-icon>
         <span>Leading icon</span>
       </button>
     </forge-button>
     <forge-button type="outlined">
-      <button>
+      <button type="button">
         <span>Trailing icon</span>
         <forge-icon name="favorite"></forge-icon>
       </button>
