--- a/src/app/views/components/floating-action-button/floating-action-button.component.html
+++ b/src/app/views/components/floating-action-button/floating-action-button.component.html
@@ -1,6 +1,6 @@
 <app-demo-card headerText="Floating Action Button">
   <forge-fab>
-    <button>
+    <button type="button">
       <forge-icon name="favorite"></forge-icon>
     </button>
   </forge-fab>
@@ -9,7 +9,7 @@
   <br/>
 
   <forge-fab mini="true">
-    <button>
+    <button type="button">
       <forge-icon name="favorite"></forge-icon>
     </button>
   </forge-fab>
@@ -18,7 +18,7 @@
   <br/>
 
   <forge-fab extended="true">
-    <button>
+    <button type="button">
       <forge-icon name="add"></forge-icon>
       <span>Create</span>
     </button>
@@ -28,7 +28,7 @@
   <br/>
 
   <forge-fab extended="true">
-    <button>
+    <button type="button">
       <span>Create</span>
       <forge-icon name="add"></forge-icon>
     </button>
@@ -38,7 +38,7 @@
   <br/>
 
   <forge-fab extended="true">
-    <button>
+    <button type="button">
       <span>Create</span>
     </button>
   </forge-fab>
@@ -47,7 +47,7 @@
   <br/>
 
   <forge-fab color="primary">
-    <button>
+    <button type="button">
       <forge-icon name="add"></forge-icon>
     </button>
   </forge-fab>
@@ -56,13 +56,13 @@
   <br/>
 
   <forge-fab color="danger" style="--mdc-theme-text-primary-on-light: white;">
-    <button>
+    <button type="button">
       <forge-icon name="delete"></forge-icon>
     </button>
   </forge-fab>
 
   <forge-fab style="position: fixed; bottom: 1rem; right: 1rem; --mdc-theme-text-primary-on-light: white; ">
-    <button>
+    <button type="button">
       <forge-icon name="add"></forge-icon>
     </button>
   </forge-fab>
