--- a/src/app/views/examples/expansion-panel-examples/expansion-panel-examples.component.html
+++ b/src/app/views/examples/expansion-panel-examples/expansion-panel-examples.component.html
@@ -1,5 +1,5 @@
 <div class="forge-expansion-demo__container">
-  <!-- <forge-card style="margin-bottom: 16px;" has-padding="false">
+  <!-- <forge-card style="margin-bottom: 16px;">
     <div style="display: flex; justify-content: space-between; align-items: center; padding: 8px 16px;">
       <forge-text-field style="flex: 1; margin-right: 16px;">
         <forge-icon slot="leading" name=search></forge-icon>
@@ -14,7 +14,6 @@
   <forge-card
     outlined="true"
     *ngFor="let datum of data"
-    has-padding="false"
     [ngClass]="{'container-outline-demo ' : showFlexboxOutlines}"
   >
     <div class="card-detail__container">
