--- a/src/app/views/examples/toolbar-example/toolbar-example.component.html
+++ b/src/app/views/examples/toolbar-example/toolbar-example.component.html
@@ -1,7 +1,7 @@
 <div class="container">
 
-  <forge-card has-padding="false">
-    <!-- scaffold is not specifically required here since the card has it's own similar set of slots.
+  <forge-card>
+    <!-- scaffold is not specifically required here since the card has its own similar set of slots.
       We just want to demo that the scaffold can be used for smaller layouts as well. -->
     <forge-scaffold>
 
@@ -46,7 +46,7 @@
     </forge-scaffold>
   </forge-card>
 
-  <forge-card has-padding="false">
+  <forge-card>
     <forge-toolbar class="toolbar--no-footer">
       <h3 slot="start" class="forge-typography--headline5">Goal progress</h3>
     </forge-toolbar>
@@ -72,7 +72,7 @@
     </forge-toolbar>
   </forge-card>
 
-  <forge-card has-padding="false" class="span-full">
+  <forge-card class="span-full">
     <forge-toolbar slot="header">
       <h3 slot="start" class="forge-typography--headline5">Recent feedback</h3>
     </forge-toolbar>
