--- a/src/app/views/examples/toolbar-example/toolbar-example.component.scss
+++ b/src/app/views/examples/toolbar-example/toolbar-example.component.scss
@@ -1,3 +1,7 @@
+:host {
+  --forge-card-padding: 0;
+}
+
 .container {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
