--- a/src/app/views/components/page-state/page-state.component.html
+++ b/src/app/views/components/page-state/page-state.component.html
@@ -4,10 +4,10 @@
     <div slot="title">Nothing but tumbleweeds here...</div>
     <div slot="message">Even our best explorer couldn't find the page you're looking for. It might have been removed or you may have mistyped the URL.</div>
     <forge-button type="raised" slot="action">
-      <button>Go back</button>
+      <button type="button">Go back</button>
     </forge-button>
     <forge-button type="outlined" slot="action">
-      <button>Refresh</button>
+      <button type="button">Refresh</button>
     </forge-button>
   </forge-page-state>
 </app-demo-card>
