feat: add dialog service example

--- a/src/app/views/components/dialog/dialog.component.html
+++ b/src/app/views/components/dialog/dialog.component.html
@@ -1,7 +1,11 @@
 <app-demo-card headerText="Dialog" #container>
-  <forge-button type="raised">
-    <button (click)="showConfirmDialog()">Show confirm dialog</button>
-  </forge-button>
+  <div>
+
+    <forge-button type="raised">
+      <button (click)="showConfirmDialog()">Show confirm dialog</button>
+    </forge-button>
+    
+  </div>
 
   <br />
   <br />
@@ -61,4 +65,6 @@
       <label for="add-class" slot="label">Custom dialog class</label>
     </forge-text-field>
   </div>
+
+  
 </app-demo-card>
