fix: review prep changes

--- a/src/app/views/examples/dialog-service-example/dialog/dialog.component.html
+++ b/src/app/views/examples/dialog-service-example/dialog/dialog.component.html
@@ -1,5 +1,5 @@
 <div class="app-dialog" >
-  <h2 id="dialog-title" forge-dialog-move-target>Open dialog</h2>
-  <p id="dialog-desc">Dialog will be closed by the service in {{counter$ | async}}</p>
+  <h2 forge-dialog-move-target>Open dialog</h2>
+  <p>Dialog will be closed by the service in {{counter$ | async}}</p>
 </div>
 
