feat(DialogService): enhance to manage open dialog refs (#46)

--- a/src/app/views/components/dialog/dialog.component.html
+++ b/src/app/views/components/dialog/dialog.component.html
@@ -1,7 +1,9 @@
 <app-demo-card headerText="Dialog" #container>
-  <forge-button type="raised">
-    <button (click)="showConfirmDialog()">Show confirm dialog</button>
-  </forge-button>
+  <div>
+    <forge-button type="raised">
+      <button (click)="showConfirmDialog()">Show confirm dialog</button>
+    </forge-button>
+  </div>
 
   <br />
   <br />
