--- a/src/app/views/components/list/list.component.html
+++ b/src/app/views/components/list/list.component.html
@@ -1,7 +1,7 @@
 <app-demo-card headerText="List">
   <forge-list>
     <forge-list-item *ngFor="let item of items">
-      {{item.label}}
+      <button>{{item.label}}</button>
     </forge-list-item>
   </forge-list>
 </app-demo-card>
